Fix logging to std out identification.